--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
 
 
-<!-- Mirrored from www.uniqare.qevvytech.co.ke/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 04 Jan 2020 13:00:36 GMT -->
 
 <head>
     <title>UniQare Medical Laboratories</title>
@@ -54,25 +53,6 @@
 <body>
     <!-- main -->
     <div id="home">
-        <!-- top header -->
-        <!-- <header>
-			<div class="top-bar py-3">
-				<div class="container">
-					<div class="row">
-						<div class=" top-social-agile  text-center">
-							<div class="row">
-						
-								<div class=" header-top">
-									<p class="text-bl">
-										<span class="fa fa-phone mr-2"></span>+254 20 2134121 | +254 20 726 729 315 | +254 20 732 712 166
-									</p>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</header> -->
 
         <!-- second header -->
         <div class="main-top">
@@ -117,44 +97,10 @@
                 <img src="images/uq3.jpg" alt>
                 <img src="images/uq4.jpg" alt>
                 <img src="images/uq1.jpg" alt>
-
-
         </div>
 
     </div>
     </div>
-
-    <!-- Floating Social Media bar Starts -->
-    <!-- <div class="float-sm">
-	<div class="fl-fl float-fb">
-		<i class="fab floater fa-facebook fa-4x"></i>
-			  <a href="https://www.facebook.com/kelv.mutiso" target="_blank"> &nbsp;&nbsp;Like us!</a>
-	</div>
-
-	<div class="fl-fl float-tw">
-		<i class="fab floater fa-twitter fa-4x"></i>
-	  <a href="https://twitter.com/kelv_mutiso" target="_blank">&nbsp;&nbsp;Follow us!</a>
-	</div>
-
-	<div class="fl-fl float-ig">
-		<i class="fab floater fa-instagram fa-4x"></i>
-	  <a href="https://www.instagram.com/kelv_mutiso/?hl=en" target="_blank">&nbsp;&nbsp;Follow us!</a>
-	</div>
-	<div class="fl-fl float-gp">
-		<i class="far floater fa-envelope-open fa-4x"></i>
-			  <a href="mailto:info@uniqarelabs.com">&nbsp;&nbsp;Write to us!</a>
-	</div>
-	<div class="fl-fl float-rs">
-				<i class="fas floater fa-map-marker-alt fa-4x"></i>		
-	  <a href="https://goo.gl/maps/s2LeY26WDuE2" target="_blank">&nbsp;&nbsp;Find us!</a>
-	</div>
-	
-	<div class="fl-fl float-pn">
-	  <i class="fa fa-pinterest"></i>
-	  <a href="" target="_blank">Follow us!</a>
-	</div>
-  </div> -->
-    <!-- Floating Social Media bar Ends -->
 
 
     <!-- banner bottom -->
@@ -732,17 +678,52 @@
                 <div class="col-lg-6 w3l-footer mt-lg-0 mt-5">
                     <h3 class="mb-sm-4 mb-3 text-wh">Connect with us</h3>
 
-
+                    <div id="icons" style="color:white !important;">
+                        <div class="flip-container">
+                            <div id="flip-reversed">
+                                <a href="https://www.facebook.com/uniqarelabs" target="_blank">
+                                    <i class="fab fa-facebook fa-2x" style="color: white !important;"></i>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="flip-container">
+                            <div id="flip-reversed">
+                                <a href="#" target="_blank">
+                                    <i class="fab fa-twitter fa-2x" style="color:white !important;"></i>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="flip-container">
+                            <div id="flip-reversed">
+                                <a href="#" target="_blank">
+                                    <i class="fab fa-instagram fa-2x" style="color:white !important;"></i>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="flip-container">
+                            <div id="flip-reversed">
+                                <a href="mailto:info@uniqarelabs.com">
+                                    <i class="far fa-envelope-open fa-2x" style="color: white !important;"></i>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="flip-container">
+                            <div id="flip-reversed">
+                                <a href="https://goo.gl/maps/s2LeY26WDuE2" target="_blank">
+                                    <i class="fas fa-map-marker-alt fa-2x" style="color:white !important;"></i> </a>
+                            </div>
+                        </div>
+                    </div>
 
                     <ul class="list-unstyled list-styles mt-lg-5 mt-4">
                         <li>
-                            <p class="text-li"><span class="fa fa-location-arrow mr-2"></span>Arrow House, 1st Floor Suite 6, Koinange Street, Nairobi, Kenya.</p>
+                            <p class="text-li"><span class="fas fa-map-marker-alt mr-2"></span>Arrow House, 1st Floor Suite 6, Koinange Street, Nairobi, Kenya.</p>
                         </li>
                         <li class="my-3">
-                            <p class="text-li"><span class="fa fa-phone mr-2"></span>+254 20 2134121 | +254 20 726 729 315 | +254 20 732 712 166 </p>
+                            <p class="text-li"><span class="fas fa-phone mr-2"></span>+254 20 2134121 | +254 20 726 729 315 | +254 20 732 712 166 </p>
                         </li>
                         <li>
-                            <a href="mailto:info@uniqarelabs.com" class="text-wh"><span class="fa fa-envelope-open mr-2"></span>info@uniqarelabs.com</a>
+                            <a href="mailto:info@uniqarelabs.com" class="text-wh"><span class="fas fa-envelope-open mr-2"></span>info@uniqarelabs.com</a>
                         </li>
                     </ul>
 
