removed location and changed numbers

--- a/index.html
+++ b/index.html
@@ -677,7 +677,7 @@
                                 </a>
                             </div>
                         </div>
-                        <div class="flip-container">
+<!--                         <div class="flip-container">
                             <div id="flip-reversed">
                                 <a href="#" target="_blank">
                                     <i class="fab fa-twitter fa-2x" style="color:white !important;"></i>
@@ -690,7 +690,7 @@
                                     <i class="fab fa-instagram fa-2x" style="color:white !important;"></i>
                                 </a>
                             </div>
-                        </div>
+                        </div> -->
                         <div class="flip-container">
                             <div id="flip-reversed">
                                 <a href="mailto:info@uniqarelabs.com">
@@ -698,20 +698,20 @@
                                 </a>
                             </div>
                         </div>
-                        <div class="flip-container">
+<!--                         <div class="flip-container">
                             <div id="flip-reversed">
                                 <a href="https://goo.gl/maps/s2LeY26WDuE2" target="_blank">
                                     <i class="fas fa-map-marker-alt fa-2x" style="color:white !important;"></i> </a>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
 
                     <ul class="list-unstyled list-styles mt-lg-5 mt-4">
-                        <li>
+<!--                         <li>
                             <p class="text-li"><span class="fas fa-map-marker-alt mr-2"></span>Arrow House, 1st Floor Suite 6, Koinange Street, Nairobi, Kenya.</p>
-                        </li>
+                        </li> -->
                         <li class="my-3">
-                            <p class="text-li"><span class="fas fa-phone mr-2"></span>+254 20 2134121 | +254 20 726 729 315 | +254 20 732 712 166 </p>
+                            <p class="text-li"><span class="fas fa-phone mr-2"></span>+254 20 2134121 | +254 742 795 551 | +254 788 177 848 </p>
                         </li>
                         <li>
                             <a href="mailto:info@uniqarelabs.com" class="text-wh"><span class="fas fa-envelope-open mr-2"></span>info@uniqarelabs.com</a>
