removed location, replaced numbers and signed

--- a/index.html
+++ b/index.html
@@ -29,11 +29,15 @@
     <meta name="theme-color" content="#ffffff">
 
     <!-- Custom-Files -->
+    <link rel="stylesheet" href="css/icomoon/style.css">
+    <link rel="stylesheet" href="fonts/flaticon/font/flaticon.css">
     <link rel="stylesheet" href="css/bootstrap.css">
     <link href="css/slide.css" type="text/css" rel="stylesheet" media="all">
     <link rel="stylesheet" href="css/style.css" type="text/css" media="all" />
     <link href="css/all.css" rel="stylesheet">
     <link href="css/social.css" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/a02728ffab.js" crossorigin="anonymous"></script>
+
 
 
     <!-- Web-Fonts -->
@@ -677,20 +681,6 @@
                                 </a>
                             </div>
                         </div>
-<!--                         <div class="flip-container">
-                            <div id="flip-reversed">
-                                <a href="#" target="_blank">
-                                    <i class="fab fa-twitter fa-2x" style="color:white !important;"></i>
-                                </a>
-                            </div>
-                        </div>
-                        <div class="flip-container">
-                            <div id="flip-reversed">
-                                <a href="#" target="_blank">
-                                    <i class="fab fa-instagram fa-2x" style="color:white !important;"></i>
-                                </a>
-                            </div>
-                        </div> -->
                         <div class="flip-container">
                             <div id="flip-reversed">
                                 <a href="mailto:info@uniqarelabs.com">
@@ -698,18 +688,9 @@
                                 </a>
                             </div>
                         </div>
-<!--                         <div class="flip-container">
-                            <div id="flip-reversed">
-                                <a href="https://goo.gl/maps/s2LeY26WDuE2" target="_blank">
-                                    <i class="fas fa-map-marker-alt fa-2x" style="color:white !important;"></i> </a>
-                            </div>
-                        </div> -->
                     </div>
 
                     <ul class="list-unstyled list-styles mt-lg-5 mt-4">
-<!--                         <li>
-                            <p class="text-li"><span class="fas fa-map-marker-alt mr-2"></span>Arrow House, 1st Floor Suite 6, Koinange Street, Nairobi, Kenya.</p>
-                        </li> -->
                         <li class="my-3">
                             <p class="text-li"><span class="fas fa-phone mr-2"></span>+254 20 2134121 | +254 742 795 551 | +254 788 177 848 </p>
                         </li>
@@ -726,14 +707,21 @@
 
     <!-- footer bottom -->
     <!-- copyright -->
-    <div class="copy-w3pvt text-center">
-        <div class="container py-3">
+    <div class="row copyright ">
+        <div class="col-md-8 copy ">
+            <p>
 
-            <p>&copy;
+                &copy; 2020 -
                 <script>
-                    document.write(new Date().getFullYear())
-                </script>
-                UniQare Medical Laboratories. All rights reserved
+                    document.write(new Date().getFullYear());
+                </script> | Uniqare Medical Laboratories
+            </p>
+        </div>
+        <div class="col-md-4 sign " style="margin-top: 0px;">
+            <p>
+
+                <a class="hov" href="https://www.iamkelv.co/ " target="_blank " style="font-size: 12px; "> Signed with <i class="icon-heart text-danger " aria-hidden="true "></i></a>
+                <a class="hid" href="https://www.iamkelv.co/ " target="_blank " style="font-size: 12px; ">www.iamkelv.co</a>
             </p>
         </div>
     </div>
