--- a/index.html
+++ b/index.html
@@ -711,7 +711,7 @@
         <div class="col-md-8 copy ">
             <p>
 
-                &copy; 2020 -
+                &copy; 
                 <script>
                     document.write(new Date().getFullYear());
                 </script> | Uniqare Medical Laboratories
