--- a/index.html
+++ b/index.html
@@ -87,11 +87,11 @@
         <base #href="">
         <div id="slider">
             <figure>
-                <img src="images/uq11.jpg" alt>
-                <img src="images/uq6.jpg" alt>
-                <img src="images/uq12.jpg" alt>
-                <img src="images/uq13.jpg" alt>
-                <img src="images/uq1.jpg" alt>
+                <img src="images/2023_1.jpg" alt>
+                <img src="images/2023_7.jpg" alt>
+                <img src="images/2023_3.jpg" alt>
+                <img src="images/2023_4.jpg" alt>
+                <img src="images/2023_5.jpg" alt>
         </div>
 
     </div>
@@ -102,7 +102,7 @@
     <div class="section-2">
         <div class="container-fluid">
             <div class="row slide">
-                <div class="col-xl-4 col-lg-4 triple-sec p-5">
+                <!-- <div class="col-xl-4 col-lg-4 triple-sec p-5">
                     <h5 class="text-wh ">We have something to be proud of</h5>
                     <ul class="list-unstyled mt-4">
                         <li class="style-bottom-w3">
@@ -114,8 +114,8 @@
                             <p class="text-li">Years of experience</p>
                         </li>
                     </ul>
-                </div>
-                <div class="col-xl-4 col-lg-4 triple-sec p-5">
+                </div> -->
+                <div class="col-xl-6 col-lg-6 triple-sec p-5">
                     <h5 class="text-wh ">Opening Hours</h5>
                     <ul class="list-unstyled text-wh mt-4">
                         <li class="clearfix py-3">
@@ -132,7 +132,7 @@
                         </li>
                     </ul>
                 </div>
-                <div class="col-xl-4 col-lg-4 triple-sec p-5 text-center">
+                <div class="col-xl-6 col-lg-6 triple-sec p-5 text-center">
                     <p class="text-uppercase text-li mt-xl-5 mt-4 pt-xl-2"></p>
                     <h4 class="down-list-w3 text-wh  mt-1 mb-4">Convenient?</h4>
                     <a href="#contact" class="some-small-btn bg-wh btn text-bl mb-xl-0 mb-4">Contacts us</a>
@@ -169,7 +169,7 @@
                     </div>
                 </div>
                 <div class="col-lg-5 agileits_works-grid1 mt-lg-0 mt-sm-5 mt-4">
-                    <img src="images/uq13.jpg" alt="" class="img-fluid" />
+                    <img src="images/2023_6.jpg" alt="" class="img-fluid" />
                 </div>
             </div>
         </div>
@@ -179,9 +179,9 @@
     <section class="services-w3ls py-5" id="services">
         <div class="container py-xl-5 py-lg-3">
             <div class="title-section mb-md-5 mb-4 align-items-center text-center serv">
-                <h6 class="w3ls-title-sub" style="color: white!important;">Some</h6>
+                <h6 class="w3ls-title-sub" style="color: white!important;">Our</h6>
                 <h3 class="w3ls-title text-uppercase   font-weight-bold" style="color: white!important;">Services</h3>
-                <h6 class="w3ls-title-sub" style="color: white!important;">we offer</h6>
+                <!-- <h6 class="w3ls-title-sub" style="color: white!important;">we offer</h6> -->
             </div>
             <div class="row">
                 <div class="col-lg-6 mt-lg-0">
@@ -218,7 +218,7 @@
                         <span><i class="fas fa-medkit"></i></span>
                         <!-- .Icon ends here -->
                         <div class="service-content ml-4">
-                            <h3 class="text-wh ser ">Food Medical Checkup</h3>
+                            <h3 class="text-wh ser ">Food Handlers Tests</h3>
                             <p class="my-3 text-li">
                                 We carry out laboratory medical check up for food handlers within the region.
                             </p>
@@ -247,7 +247,7 @@
                         <span><i class="fa-solid fa-joint"></i></span>
                         <!-- .Icon ends here -->
                         <div class="service-content ml-4">
-                            <h3 class="text-wh ser ">Drug Abuse Testing</h3>
+                            <h3 class="text-wh ser ">Drug Abuse Screen Testing (DAST) & Counseling                            </h3>
                             <p class="my-3 text-li">
                                 We carry out drug abuse testing, counseling, psychological evaluation, and psychiatric treatment support and consultation services.
                             </p>
@@ -277,7 +277,7 @@
                         <div class="service-content ml-4">
                             <h3 class="text-wh ser ">Health & Diagnostic Education</h3>
                             <p class="my-3 text-li">
-                                Offering health and diagnostic education (HDE) services and more so participate in current research activities, quality control programmes and health care services.
+                                Offering Health and Diagnostic Education (HDE) services and more so participate in current research activities, quality control programmes and health care services.
                             </p>
                         </div>
                         <!-- .Service-content ends here -->
@@ -311,9 +311,9 @@
         <div class="container-fluid savvy">
 
             <div class="title-section mb-md-5 mb-4 align-items-center text-center servy">
-                <h6 class="w3ls-title-sub">Some</h6>
-                <h3 class="w3ls-title text-uppercase   font-weight-bold">Lab Tests</h3>
-                <h6 class="w3ls-title-sub">we offer</h6>
+                <!-- <h6 class="w3ls-title-sub">Some</h6> -->
+                <h3 class="w3ls-title text-uppercase   font-weight-bold">Laboratory Tests</h3>
+                <!-- <h6 class="w3ls-title-sub">we offer</h6> -->
             </div>
             <div class="card-group">
                 <div class="card">
@@ -404,7 +404,7 @@
                 </div>
                 <div class="card">
                     <div class="card-body">
-                        <p class="card-question">Mineral and Trace Elements</p>
+                        <p class="card-question">Mineral & Trace Elements</p>
                     </div>
 
                     <div class="card-footer">
@@ -437,7 +437,7 @@
                 </div>
                 <div class="card">
                     <div class="card-body">
-                        <p class="card-question">Hormones and Vitamins</p>
+                        <p class="card-question">Hormones & Vitamins</p>
                     </div>
 
                     <div class="card-footer">
@@ -483,7 +483,7 @@
             <div class="card-group">
                 <div class="col-md-4 card">
                     <div class="card-body">
-                        <p class="card-question">Histology and Cytology </p>
+                        <p class="card-question">Histology & Cytology </p>
                     </div>
 
                     <div class="card-footer">
@@ -508,7 +508,7 @@
                 <div class="modal-content">
                     <div class="modal-header">
                         <!-- <button type="button" class="close" data-dismiss="modal">&times;</button> -->
-                        <h4 class="modal-title">Lab Tests in Serology</h4>
+                        <h4 class="modal-title">Serology Tests</h4>
                     </div>
                     <div class="modal-body">
                         <ul><li>HIV I&II</li>
@@ -552,7 +552,7 @@
                 <div class="modal-content">
                     <div class="modal-header">
                         <!-- <button type="button" class="close" data-dismiss="modal">&times;</button> -->
-                        <h4 class="modal-title">Lab Tests in Microbiology</h4>
+                        <h4 class="modal-title">Microbiology Tests</h4>
                     </div>
                     <div class="modal-body">
                         <ul> <li> Urinalysis (U/A) </li>
@@ -588,7 +588,7 @@
                 <div class="modal-content">
                     <div class="modal-header">
                         <!-- <button type="button" class="close" data-dismiss="modal">&times;</button> -->
-                        <h4 class="modal-title">Lab tests in Haematology</h4>
+                        <h4 class="modal-title">Haematology Tests</h4>
                     </div>
                     <div class="modal-body">
                         <ul>
@@ -626,7 +626,7 @@
                 <div class="modal-content">
                     <div class="modal-header">
                         <!-- <button type="button" class="close" data-dismiss="modal">&times;</button> -->
-                        <h4 class="modal-title">Lab tests in Coagulation</h4>
+                        <h4 class="modal-title">Coagulation Tests</h4>
                     </div>
                     <div class="modal-body">
                         <ul>
@@ -652,7 +652,7 @@
                 <div class="modal-content">
                     <div class="modal-header">
                         <!-- <button type="button" class="close" data-dismiss="modal">&times;</button> -->
-                        <h4 class="modal-title">Lab tests in Inflammation/ Immune</h4>
+                        <h4 class="modal-title">Inflammation/ Immune Tests</h4>
                     </div>
                     <div class="modal-body">
                         <ul><li>Complement C3</li>
@@ -675,7 +675,7 @@
                 <div class="modal-content">
                     <div class="modal-header">
                         <!-- <button type="button" class="close" data-dismiss="modal">&times;</button> -->
-                        <h4 class="modal-title">Lab tests in Glucose (Sugar Levels)</h4>
+                        <h4 class="modal-title">Glucose (Sugar Levels)</h4>
                     </div>
                     <div class="modal-body">
                         <ul>
@@ -701,14 +701,14 @@
                 <div class="modal-content">
                     <div class="modal-header">
                         <!-- <button type="button" class="close" data-dismiss="modal">&times;</button> -->
-                        <h4 class="modal-title">Lab tests in Clinical Chemistry</h4>
+                        <h4 class="modal-title">Clinical Chemistry Tests</h4>
                     </div>
                     <div class="modal-body">
                         <ul>
                             <li>Lipid Profile</li>
                             <li> Liver Function Test (LFT)</li>
                             <li> Urea, Electrolytes & Creatinine (UEC)</li>
-                            <li> Smooth muscle Abs</li>
+                            <li> Smooth Muscle Abs</li>
                             <li> ACTH</li>
                             <li> Anti-ds DNA Abs</li>
                             <li> C-reactive protein</li>
@@ -736,7 +736,7 @@
                 <div class="modal-content">
                     <div class="modal-header">
                         <!-- <button type="button" class="close" data-dismiss="modal">&times;</button> -->
-                        <h4 class="modal-title">Lab tests in Pancreatic Function</h4>
+                        <h4 class="modal-title">Pancreatic Function Tests</h4>
                     </div>
                     <div class="modal-body">
                         <ul>
@@ -760,7 +760,7 @@
                 <div class="modal-content">
                     <div class="modal-header">
                         <!-- <button type="button" class="close" data-dismiss="modal">&times;</button> -->
-                        <h4 class="modal-title">Lab tests in Mineral and Trace Elements</h4>
+                        <h4 class="modal-title">Mineral & Trace Elements Tests</h4>
                     </div>
                     <div class="modal-body">
                         <ul>
@@ -786,7 +786,7 @@
                 <div class="modal-content">
                     <div class="modal-header">
                         <!-- <button type="button" class="close" data-dismiss="modal">&times;</button> -->
-                        <h4 class="modal-title">Lab tests in Muscle Enzymes</h4>
+                        <h4 class="modal-title">Muscle Enzymes Tests</h4>
                     </div>
                     <div class="modal-body">
                         <ul>
@@ -811,7 +811,7 @@
                 <div class="modal-content">
                     <div class="modal-header">
                         <!-- <button type="button" class="close" data-dismiss="modal">&times;</button> -->
-                        <h4 class="modal-title">Lab tests in Cardiac Enzymes</h4>
+                        <h4 class="modal-title">Cardiac Enzymes Tests</h4>
                     </div>
                     <div class="modal-body">
                         <ul>
@@ -835,12 +835,12 @@
                 <div class="modal-content">
                     <div class="modal-header">
                         <!-- <button type="button" class="close" data-dismiss="modal">&times;</button> -->
-                        <h4 class="modal-title">Lab tests in Hormones and Vitamins</h4>
+                        <h4 class="modal-title">Hormones & Vitamins Tests</h4>
                     </div>
                     <div class="modal-body">
                         <ul>
                             <li>Homocysteine</li>
-                            <li> Parathyroid hormones (P.T.H)</li>
+                            <li> Parathyroid Hormones (P.T.H)</li>
                             <li> Folic/Folate</li>
                             <li> Vitamin D</li>
                             <li> Cortisol Serum</li>
@@ -862,7 +862,7 @@
                 <div class="modal-content">
                     <div class="modal-header">
                         <!-- <button type="button" class="close" data-dismiss="modal">&times;</button> -->
-                        <h4 class="modal-title">Lab tests in Fertility Hormone</h4>
+                        <h4 class="modal-title">Fertility Hormone Tests</h4>
                     </div>
                     <div class="modal-body">
                         <ul>
@@ -892,7 +892,7 @@
                 <div class="modal-content">
                     <div class="modal-header">
                         <!-- <button type="button" class="close" data-dismiss="modal">&times;</button> -->
-                        <h4 class="modal-title">Lab tests in Bone Chemistry</h4>
+                        <h4 class="modal-title">Bone Chemistry Tests</h4>
                     </div>
                     <div class="modal-body">
                         <ul>
@@ -917,7 +917,7 @@
                 <div class="modal-content">
                     <div class="modal-header">
                         <!-- <button type="button" class="close" data-dismiss="modal">&times;</button> -->
-                        <h4 class="modal-title">Lab tests in Tumour Markers</h4>
+                        <h4 class="modal-title">Tumour Markers Tests</h4>
                     </div>
                     <div class="modal-body">
                         <ul>
@@ -947,7 +947,7 @@
                 <div class="modal-content">
                     <div class="modal-header">
                         <!-- <button type="button" class="close" data-dismiss="modal">&times;</button> -->
-                        <h4 class="modal-title">Lab tests in Histology and Cytology</h4>
+                        <h4 class="modal-title">Histology and Cytology Tests</h4>
                     </div>
                     <div class="modal-body">
                         <ul><li>for Histology (small-measuring 0-1 cm )</li> 
@@ -994,11 +994,25 @@
                                 </a>
                             </div>
                         </div>
+                        <div class="flip-container">
+                            <div id="flip-reversed">
+                                <a href="#">
+                                    <i class="fab fa-twitter fa-2x" style="color: white !important;"></i>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="flip-container">
+                            <div id="flip-reversed">
+                                <a href="#">
+                                    <i class="fab fa-instagram fa-2x" style="color: white !important;"></i>
+                                </a>
+                            </div>
+                        </div>
                     </div>
 
                     <ul class="list-unstyled list-styles mt-lg-5 mt-4">
                         <li class="my-3">
-                            <p class="text-li"><span class="fas fa-phone mr-2"></span>+254 20 2134121 | +254 742 795 551 | +254 788 177 848 </p>
+                            <p class="text-li"><span class="fas fa-phone mr-2"></span>+254 20 2134121 | +254 742 795 551 | +254 722 610 735 </p>
                         </li>
                         <li>
                             <a href="mailto:info@uniqarelabs.com" class="text-wh"><span class="fas fa-envelope-open mr-2"></span>info@uniqarelabs.com</a>
