Fallback to original emails + WhatsApp FAB

--- a/index.html
+++ b/index.html
@@ -87,11 +87,11 @@
         <base #href="">
         <div id="slider">
             <figure>
-                <img src="images/2023_1.jpg" alt>
-                <img src="images/2023_7.jpg" alt>
-                <img src="images/2023_3.jpg" alt>
-                <img src="images/2023_4.jpg" alt>
-                <img src="images/2023_5.jpg" alt>
+                <img src="images/uq11.jpg" alt>
+                <img src="images/uq6.jpg" alt>
+                <img src="images/uq12.jpg" alt>
+                <img src="images/uq13.jpg" alt>
+                <img src="images/uq1.jpg" alt>
         </div>
 
     </div>
@@ -152,7 +152,7 @@
                 <div class="col-lg-7 agileits_works-grid">
                     <div class="wthree-bottom">
                         <h6 class="subheading-w3ls text-uppercase text-bl mb-4">We are committed to providing quality services to patients at all times.</h6>
-                        <p>Uniqare Medical Laboratories has been in existence for over 24 years under the name <b>Arrow Medical Laboratory</b> which was re-branded the year 2012 as <b>Uniqare Medical Laboratories</b> with the aim of bringing change in the
+                        <p>UniQare Medical Laboratories has been in existence for over 24 years under the name <b>Arrow Medical Laboratory</b> which was re-branded the year 2012 as <b>UniQare Medical Laboratories</b> with the aim of bringing change in the
                             industry. </p> <br>
                         <p>UniQare Laboratories is duly registered medical facility under Cap 499,
                             Section 14 in the laws of Kenya. </p>
@@ -987,13 +987,13 @@
                                 </a>
                             </div>
                         </div>
-                        <div class="flip-container">
+                        <!-- <div class="flip-container">
                             <div id="flip-reversed">
                                 <a href="mailto:info@uniqarelabs.com">
                                     <i class="far fa-envelope-open fa-2x" style="color: white !important;"></i>
                                 </a>
                             </div>
-                        </div>
+                        </div> -->
                         <div class="flip-container">
                             <div id="flip-reversed">
                                 <a href="#">
@@ -1025,6 +1025,11 @@
     </footer>
     <!-- //footer -->
 
+    <!-- WhatsApp FAB -->
+    <a href="https://api.whatsapp.com/send?phone=254742795551&text=Hello UniQare, I am interested in " class="float" target="_blank">
+        <i class="fab fa-whatsapp my-float"></i>
+        </a>
+
     <!-- footer bottom -->
     <!-- copyright -->
     <div class="row copyright ">
@@ -1034,7 +1039,7 @@
                 &copy; 
                 <script>
                     document.write(new Date().getFullYear());
-                </script> | Uniqare Medical Laboratories
+                </script> | Uniare Medical Laboratories
             </p>
         </div>
         <div class="col-md-4 sign " style="margin-top: 0px;">
