final touches & signage

--- a/index.html
+++ b/index.html
@@ -1033,27 +1033,27 @@
     <!-- footer bottom -->
     <!-- copyright -->
     <div class="row copyright ">
-        <div class="col-md-8 copy ">
+        <div class="col-md-6 copy ">
             <p>
 
                 &copy; 
                 <script>
                     document.write(new Date().getFullYear());
-                </script> | Uniare Medical Laboratories
+                </script> | UniQare Medical Laboratories
             </p>
+            
         </div>
-        <div class="col-md-4 sign " style="margin-top: 0px;">
+        <div class="col-md-6 sign " style="margin-top: 0px;">
             <p>
 
-                <a class="hov" href="https://www.iamkelv.co/ " target="_blank " style="font-size: 12px; "> Signed with <i class="icon-heart text-danger " aria-hidden="true "></i></a>
-                <a class="hid" href="https://www.iamkelv.co/ " target="_blank " style="font-size: 12px; ">www.iamkelv.co</a>
+                <a href="https://www.linkedin.com/in/thatguykelv/" target="_blank " style="font-size: 14px; text-decoration: underline; color: black;"> Signed with <i class="icon-heart text-danger " aria-hidden="true "></i></a>
             </p>
         </div>
     </div>
     <!-- //copyright -->
     <!-- //footer bottom -->
     <!-- move top icon -->
-    <a href="#home" class="move-top text-center"></a>
+    <!-- <a href="#home" class="move-top text-center"></a> -->
     <!-- //move top icon -->
     <script src="../ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script src="js/all.js"></script>
